--- a/untitled.ipynb
+++ b/untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1761,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1941,7 @@
        "[1258 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1953,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2313,7 +2313,7 @@
        "[1258 rows x 3999 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2326,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2481,7 +2481,7 @@
        "[161770 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2494,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2530,35 +2530,35 @@
        "      <td>Apixaban</td>\n",
        "      <td>Bivalirudin</td>\n",
        "      <td>the anticoagulant activities increase</td>\n",
-       "      <td>30</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Dabigatranetexilate</td>\n",
        "      <td>Bivalirudin</td>\n",
        "      <td>the anticoagulant activities increase</td>\n",
-       "      <td>30</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Dasatinib</td>\n",
        "      <td>Bivalirudin</td>\n",
        "      <td>The risk or severity of bleeding and hemorrhag...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Bivalirudin</td>\n",
        "      <td>Rivaroxaban</td>\n",
        "      <td>the anticoagulant activities increase</td>\n",
-       "      <td>30</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Tipranavir</td>\n",
        "      <td>Bivalirudin</td>\n",
        "      <td>The risk or severity of bleeding and hemorrhag...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2572,35 +2572,35 @@
        "      <td>Zanubrutinib</td>\n",
        "      <td>Curcuminsulfate</td>\n",
        "      <td>The metabolism decrease</td>\n",
-       "      <td>73</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>161766</th>\n",
        "      <td>Elexacaftor</td>\n",
        "      <td>Betamethasonephosphate</td>\n",
        "      <td>The metabolism increase</td>\n",
-       "      <td>75</td>\n",
+       "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>161767</th>\n",
        "      <td>Ubrogepant</td>\n",
        "      <td>Ripretinib</td>\n",
        "      <td>The serum concentration increase</td>\n",
-       "      <td>45</td>\n",
+       "      <td>80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>161768</th>\n",
        "      <td>Avapritinib</td>\n",
        "      <td>Voxelotor</td>\n",
        "      <td>The metabolism decrease</td>\n",
-       "      <td>73</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>161769</th>\n",
        "      <td>Zanubrutinib</td>\n",
        "      <td>Elexacaftor</td>\n",
        "      <td>The metabolism decrease</td>\n",
-       "      <td>73</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2622,22 +2622,22 @@
        "161769         Zanubrutinib             Elexacaftor   \n",
        "\n",
        "                                              interaction  interaction_numaber  \n",
-       "0                   the anticoagulant activities increase                   30  \n",
-       "1                   the anticoagulant activities increase                   30  \n",
-       "2       The risk or severity of bleeding and hemorrhag...                    1  \n",
-       "3                   the anticoagulant activities increase                   30  \n",
-       "4       The risk or severity of bleeding and hemorrhag...                    1  \n",
+       "0                   the anticoagulant activities increase                   46  \n",
+       "1                   the anticoagulant activities increase                   46  \n",
+       "2       The risk or severity of bleeding and hemorrhag...                   91  \n",
+       "3                   the anticoagulant activities increase                   46  \n",
+       "4       The risk or severity of bleeding and hemorrhag...                   91  \n",
        "...                                                   ...                  ...  \n",
-       "161765                            The metabolism decrease                   73  \n",
-       "161766                            The metabolism increase                   75  \n",
-       "161767                   The serum concentration increase                   45  \n",
-       "161768                            The metabolism decrease                   73  \n",
-       "161769                            The metabolism decrease                   73  \n",
+       "161765                            The metabolism decrease                   35  \n",
+       "161766                            The metabolism increase                   48  \n",
+       "161767                   The serum concentration increase                   80  \n",
+       "161768                            The metabolism decrease                   35  \n",
+       "161769                            The metabolism decrease                   35  \n",
        "\n",
        "[161770 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4292,26 +4292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load saved dataset\n",
-    "# with open('./saved_dataset/drug_dataset2.pickle','rb') as f:\n",
-    "#     drug_dataset = pickle.load(f)\n",
-    "#     drug_dataset\n",
-    "len(drug_dataset.classes)"
+    "with open('./saved_dataset/drug_dataset2.pickle','rb') as f:\n",
+    "    drug_dataset = pickle.load(f)\n",
+    "    drug_dataset"
    ]
   },
   {
@@ -4356,7 +4344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4393,22 +4381,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "CUDA error: device-side assert triggered\nCUDA kernel errors might be asynchronously reported at some other API call, so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1.\nCompile with `TORCH_USE_CUDA_DSA` to enable device-side assertions.\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# create model and train loop\u001b[39;00m\n\u001b[0;32m      2\u001b[0m device \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mcuda\u001b[39m\u001b[39m'\u001b[39m \u001b[39mif\u001b[39;00m torch\u001b[39m.\u001b[39mcuda\u001b[39m.\u001b[39mis_available() \u001b[39melse\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mcpu\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m----> 4\u001b[0m model \u001b[39m=\u001b[39m CPSP2(\u001b[39m1\u001b[39;49m,\u001b[39m3\u001b[39;49m,\u001b[39m100\u001b[39;49m)\u001b[39m.\u001b[39;49mto(device\u001b[39m=\u001b[39;49mdevice)\n\u001b[0;32m      6\u001b[0m criterion \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mnn\u001b[39m.\u001b[39mCrossEntropyLoss()\n\u001b[0;32m      7\u001b[0m optimizer \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39moptim\u001b[39m.\u001b[39mSGD(model\u001b[39m.\u001b[39mparameters(),lr\u001b[39m=\u001b[39m\u001b[39m0.0001\u001b[39m,momentum\u001b[39m=\u001b[39m\u001b[39m0.9\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\Cerberus\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\nn\\modules\\module.py:1145\u001b[0m, in \u001b[0;36mModule.to\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1141\u001b[0m         \u001b[39mreturn\u001b[39;00m t\u001b[39m.\u001b[39mto(device, dtype \u001b[39mif\u001b[39;00m t\u001b[39m.\u001b[39mis_floating_point() \u001b[39mor\u001b[39;00m t\u001b[39m.\u001b[39mis_complex() \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m   1142\u001b[0m                     non_blocking, memory_format\u001b[39m=\u001b[39mconvert_to_format)\n\u001b[0;32m   1143\u001b[0m     \u001b[39mreturn\u001b[39;00m t\u001b[39m.\u001b[39mto(device, dtype \u001b[39mif\u001b[39;00m t\u001b[39m.\u001b[39mis_floating_point() \u001b[39mor\u001b[39;00m t\u001b[39m.\u001b[39mis_complex() \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m, non_blocking)\n\u001b[1;32m-> 1145\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_apply(convert)\n",
-      "File \u001b[1;32mc:\\Users\\Cerberus\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\nn\\modules\\module.py:797\u001b[0m, in \u001b[0;36mModule._apply\u001b[1;34m(self, fn)\u001b[0m\n\u001b[0;32m    795\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_apply\u001b[39m(\u001b[39mself\u001b[39m, fn):\n\u001b[0;32m    796\u001b[0m     \u001b[39mfor\u001b[39;00m module \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mchildren():\n\u001b[1;32m--> 797\u001b[0m         module\u001b[39m.\u001b[39;49m_apply(fn)\n\u001b[0;32m    799\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39mcompute_should_use_set_data\u001b[39m(tensor, tensor_applied):\n\u001b[0;32m    800\u001b[0m         \u001b[39mif\u001b[39;00m torch\u001b[39m.\u001b[39m_has_compatible_shallow_copy_type(tensor, tensor_applied):\n\u001b[0;32m    801\u001b[0m             \u001b[39m# If the new tensor has compatible tensor type as the existing tensor,\u001b[39;00m\n\u001b[0;32m    802\u001b[0m             \u001b[39m# the current behavior is to change the tensor in-place using `.data =`,\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    807\u001b[0m             \u001b[39m# global flag to let the user control whether they want the future\u001b[39;00m\n\u001b[0;32m    808\u001b[0m             \u001b[39m# behavior of overwriting the existing tensor or not.\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\Cerberus\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\nn\\modules\\module.py:820\u001b[0m, in \u001b[0;36mModule._apply\u001b[1;34m(self, fn)\u001b[0m\n\u001b[0;32m    816\u001b[0m \u001b[39m# Tensors stored in modules are graph leaves, and we don't want to\u001b[39;00m\n\u001b[0;32m    817\u001b[0m \u001b[39m# track autograd history of `param_applied`, so we have to use\u001b[39;00m\n\u001b[0;32m    818\u001b[0m \u001b[39m# `with torch.no_grad():`\u001b[39;00m\n\u001b[0;32m    819\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n\u001b[1;32m--> 820\u001b[0m     param_applied \u001b[39m=\u001b[39m fn(param)\n\u001b[0;32m    821\u001b[0m should_use_set_data \u001b[39m=\u001b[39m compute_should_use_set_data(param, param_applied)\n\u001b[0;32m    822\u001b[0m \u001b[39mif\u001b[39;00m should_use_set_data:\n",
-      "File \u001b[1;32mc:\\Users\\Cerberus\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\nn\\modules\\module.py:1143\u001b[0m, in \u001b[0;36mModule.to.<locals>.convert\u001b[1;34m(t)\u001b[0m\n\u001b[0;32m   1140\u001b[0m \u001b[39mif\u001b[39;00m convert_to_format \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m t\u001b[39m.\u001b[39mdim() \u001b[39min\u001b[39;00m (\u001b[39m4\u001b[39m, \u001b[39m5\u001b[39m):\n\u001b[0;32m   1141\u001b[0m     \u001b[39mreturn\u001b[39;00m t\u001b[39m.\u001b[39mto(device, dtype \u001b[39mif\u001b[39;00m t\u001b[39m.\u001b[39mis_floating_point() \u001b[39mor\u001b[39;00m t\u001b[39m.\u001b[39mis_complex() \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m   1142\u001b[0m                 non_blocking, memory_format\u001b[39m=\u001b[39mconvert_to_format)\n\u001b[1;32m-> 1143\u001b[0m \u001b[39mreturn\u001b[39;00m t\u001b[39m.\u001b[39;49mto(device, dtype \u001b[39mif\u001b[39;49;00m t\u001b[39m.\u001b[39;49mis_floating_point() \u001b[39mor\u001b[39;49;00m t\u001b[39m.\u001b[39;49mis_complex() \u001b[39melse\u001b[39;49;00m \u001b[39mNone\u001b[39;49;00m, non_blocking)\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: CUDA error: device-side assert triggered\nCUDA kernel errors might be asynchronously reported at some other API call, so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1.\nCompile with `TORCH_USE_CUDA_DSA` to enable device-side assertions.\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0 Train Loss: 1.534780835625621 Val Loss: 1.0039714159865314\n",
+      "Epoch: 1 Train Loss: 0.82377849070477 Val Loss: 0.7154167840964125\n",
+      "Epoch: 2 Train Loss: 0.5971319818626399 Val Loss: 0.5991535537856618\n",
+      "Epoch: 3 Train Loss: 0.4604028352199069 Val Loss: 0.4682445650922574\n",
+      "Epoch: 4 Train Loss: 0.3602196089056366 Val Loss: 0.39681065723815717\n",
+      "Epoch: 5 Train Loss: 0.2835548506173337 Val Loss: 0.349833995694633\n",
+      "Epoch: 6 Train Loss: 0.2202786928725674 Val Loss: 0.3028968442120901\n",
+      "Epoch: 7 Train Loss: 0.17124636093271822 Val Loss: 0.2784001684530059\n",
+      "Epoch: 8 Train Loss: 0.1321267946594912 Val Loss: 0.22440970953581543\n",
+      "Epoch: 9 Train Loss: 0.1005779472457346 Val Loss: 0.21409647954531172\n",
+      "Epoch: 10 Train Loss: 0.07628741614597004 Val Loss: 0.17703447438596906\n",
+      "Epoch: 11 Train Loss: 0.056385380535021734 Val Loss: 0.15959450449289153\n",
+      "Epoch: 12 Train Loss: 0.042287382469210565 Val Loss: 0.1539001479455096\n",
+      "Epoch: 13 Train Loss: 0.030093528534214813 Val Loss: 0.1427774161133053\n",
+      "Epoch: 14 Train Loss: 0.02154798679571568 Val Loss: 0.12841615007349322\n",
+      "Epoch: 15 Train Loss: 0.01429513848159124 Val Loss: 0.11539759147581725\n",
+      "Epoch: 16 Train Loss: 0.010031713334986479 Val Loss: 0.11054296512440208\n",
+      "Epoch: 17 Train Loss: 0.007110087751433977 Val Loss: 0.11239044728173876\n"
      ]
     }
    ],
@@ -4459,6 +4456,104 @@
     "                                                         train_loss/len(train_loader),\n",
     "                                                         val_loss/len(val_loader)))\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the file path to save the model\n",
+    "PATH = \"./saved_dataset/model2.pt\"\n",
+    "# Save the model state dictionary\n",
+    "torch.save(model.state_dict(), PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trian Accuracy: 99.98%\n"
+     ]
+    }
+   ],
+   "source": [
+    "correct = 0\n",
+    "total = 0\n",
+    "\n",
+    "# Set the model to evaluation mode\n",
+    "model.eval()\n",
+    "\n",
+    "# Disable gradient computations\n",
+    "with torch.no_grad():\n",
+    "    for inputs, labels in train_loader:\n",
+    "        # Move inputs and labels to the device (e.g. GPU) if available\n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
+    "\n",
+    "        # Forward pass to get model predictions\n",
+    "        outputs = model(inputs)\n",
+    "\n",
+    "        # Get the predicted class for each input\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "\n",
+    "        # Count the number of correct predictions\n",
+    "        correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "        # Count the total number of inputs\n",
+    "        total += labels.size(0)\n",
+    "\n",
+    "# Compute the accuracy\n",
+    "accuracy = correct / total\n",
+    "print('trian Accuracy: {:.2%}'.format(accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "validation Accuracy: 97.48%\n"
+     ]
+    }
+   ],
+   "source": [
+    "correct = 0\n",
+    "total = 0\n",
+    "\n",
+    "# Set the model to evaluation mode\n",
+    "model.eval()\n",
+    "\n",
+    "# Disable gradient computations\n",
+    "with torch.no_grad():\n",
+    "    for inputs, labels in val_loader:\n",
+    "        # Move inputs and labels to the device (e.g. GPU) if available\n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
+    "\n",
+    "        # Forward pass to get model predictions\n",
+    "        outputs = model(inputs)\n",
+    "\n",
+    "        # Get the predicted class for each input\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "\n",
+    "        # Count the number of correct predictions\n",
+    "        correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "        # Count the total number of inputs\n",
+    "        total += labels.size(0)\n",
+    "\n",
+    "# Compute the accuracy\n",
+    "accuracy = correct / total\n",
+    "print('validation Accuracy: {:.2%}'.format(accuracy))"
    ]
   },
   {
